examples/test/testpolicy12140.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12140
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key32: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value46
      podSelector:
        matchLabels:
          key41: value18
          key13: value34
          key15: value9
